--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-<h1>{{ title }}</h1>
+<!-- <h1>{{ title }}</h1>
 <hr>
 <p>
   Bienvenidos a Angular
 
 
-</p>
+</p> -->
 
 <!-- <h3>Counter: {{ counter }}</h3>
 
@@ -12,12 +12,15 @@
 <button (click)="incrementCounter(-1)">-1</button>
 <button (click)="resetCounter()">Reset</button> -->
 
+<!-- <hr> -->
+
+<!-- <app-counter></app-counter> -->
+
+<!-- <hr> -->
+
+<!-- <app-heroes-hero></app-heroes-hero> -->
+
+<!-- <app-heroes-list></app-heroes-list> -->
+
+<app-dbz-main-page></app-dbz-main-page>
 <hr>
-
-<app-counter></app-counter>
-
-<hr>
-
-<app-heroes-hero></app-heroes-hero>
-
-<app-heroes-list></app-heroes-list>
